# sat-orbit-eclipse

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  api.py  main.py  models.py
backend/app/orbit/: __init__.py  eclipse.py  sun.py  time.py
docs/diagrams/: .$engine-flow.drawio.bkp  architecture.drawio  backend.drawio  engine-flow.drawio
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts
frontend/src/components/: EclipseTool.tsx
